--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_secure_storage: ^7.0.1
+  google_sign_in: ^5.4.4
+  google_fonts: ^4.0.3
   http: ^0.13.5
+  provider: ^6.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
