--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   google_fonts: ^4.0.3
   http: ^0.13.5
   provider: ^6.0.5
+  clay_containers: ^0.3.2
+  intl: ^0.18.0
+  flutter_datetime_picker: ^1.5.1
+  page_transition: ^2.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
