--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_secure_storage: ^7.0.1
-  google_sign_in: ^5.4.4
+  flutter_secure_storage: ^8.0.0
+  google_sign_in: ^6.0.1
   google_fonts: ^4.0.3
   http: ^0.13.5
   provider: ^6.0.5
@@ -41,11 +41,17 @@ dependencies:
   page_transition: ^2.0.9
   syncfusion_flutter_calendar: ^20.4.49
   image_picker: ^0.8.6+1
- 
-
+  signal: ^1.1.6
+ # flutter_webrtc: ^0.9.23
+  cupertino_icons: ^1.0.3
+  flutter_webrtc: ^0.9.23
+  firebase_core: ^2.7.0
+  cloud_firestore: ^4.4.3
+  socket_io_client: ^2.0.1
+  # cloud_firestore_web: ^3.3.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+ # cupertino_icons: ^1.0.2
 
 
 dev_dependencies:
