--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   syncfusion_flutter_calendar: ^20.4.49
   image_picker: ^0.8.6+1
   signal: ^1.1.6
+  lottie: ^2.2.0
  # flutter_webrtc: ^0.9.23
   cupertino_icons: ^1.0.3
   flutter_webrtc: ^0.9.23
@@ -79,6 +80,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lottie/
+    - assets/google_fonts/static/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -91,10 +94,28 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Inter
+      fonts:
+          
+          - asset: assets/google_fonts/static/Inter-Thin.ttf
+            weight: 100
+          - asset: assets/google_fonts/static/Inter-ExtraLight.ttf
+            weight: 200
+          - asset: assets/google_fonts/static/Inter-Light.ttf
+            weight: 300
+          - asset: assets/google_fonts/static/Inter-Regular.ttf
+            weight: 400
+          - asset: assets/google_fonts/static/Inter-Medium.ttf
+            weight: 500
+          - asset: assets/google_fonts/static/Inter-SemiBold.ttf
+            weight: 600
+          - asset: assets/google_fonts/static/Inter-Bold.ttf
+            weight: 700
+          - asset: assets/google_fonts/static/Inter-ExtraBold.ttf
+            weight: 800
+          - asset: assets/google_fonts/static/Inter-Black.ttf
+            weight: 900
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
