--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,14 @@ dependencies:
   firebase_core: ^2.7.0
   cloud_firestore: ^4.4.3
   socket_io_client: ^2.0.1
+  flutter_dotenv: ^5.0.2
+  videosdk: ^1.0.10
+  camera: ^0.10.0
+  flutter_svg: ^1.1.5
+  date_time_format: ^2.0.1
+  touch_ripple_effect: ^2.2.3
+  smooth_page_indicator: ^1.0.1
+  
   # cloud_firestore_web: ^3.3.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -79,11 +87,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/images/
     - assets/lottie/
     - assets/google_fonts/static/
     - assets/avatars/
-
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
