Video screen layout changed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   date_time_format: ^2.0.1
   touch_ripple_effect: ^2.2.3
   smooth_page_indicator: ^1.0.1
+  flutter_otp_text_field: ^1.1.1
+  email_validator: ^2.1.17
   
   # cloud_firestore_web: ^3.3.3
   # The following adds the Cupertino Icons font to your application.
