--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,9 @@ dependencies:
   email_validator: ^2.1.17
   flutter_pw_validator: ^1.5.0
   fancy_password_field: ^2.0.0
-  
+  shared_preferences: ^2.0.18
+  firebase_dynamic_links: ^5.0.16
+  firebase_analytics: ^10.1.5
   # cloud_firestore_web: ^3.3.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
