--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   shared_preferences: ^2.0.18
   firebase_dynamic_links: ^5.0.16
   firebase_analytics: ^10.1.5
+  go_router: ^6.2.0
   # cloud_firestore_web: ^3.3.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
